# a-star-router

./: .gitignore  CMakeLists.txt  README.md  input
include/: box.hpp  coordinates.hpp  edge.hpp  gpxparser.hpp  graph.hpp  library.hpp  node.hpp  osmnode.hpp  osmway.hpp  parameters.hpp  quadtree.hpp  router.hpp  routes.hpp  socket.hpp  tags.hpp  way.hpp  weights.hpp
src/: box.cpp  coordinates.cpp  edge.cpp  gpxparser.cpp  graph.cpp  library.cpp  main.cpp  osmnode.cpp  osmway.cpp  parameters.cpp  quadtree.cpp  router.cpp  routes.cpp  socket.cpp  way.cpp  weights.cpp
testdata/: projections.geojson  projections1.geojson  projectionsnaive.geojson
tests/: add_split_test.cpp  auto_gradient_descent2_test.cpp  auto_gradient_descent_test.cpp  auto_gradient_descentfix_test.cpp  brouter_auto_gradient_descentfix_test.cpp  brouter_verification_test.cpp  comparison_matching_getSet_test.cpp  decisionNode_density_test.cpp  experiment_test.cpp  fail_test.cpp  gpx_parser_test.cpp  jogging_verification_test.cpp  lonliest_point_forever_test.cpp  lonliest_point_test.cpp  map_matcher_test.cpp  meanjaccard2_test.cpp  meanjaccard_test.cpp  nearest_edge_test.cpp  nearest_edges_test.cpp  neureut_graph_test.cpp  node_edge_count_test.cpp  overlap_no_weight_test.cpp  parameterLengthMap_test.cpp  parameter_gradient_descent_test.cpp  quadtree_performance_test.cpp  quadtree_test.cpp  route_overlap_test.cpp  router_test.cpp  split_edge_test.cpp  tag_retrieval_test.cpp  weighted_routing_test.cpp
